--- a/views/home.html
+++ b/views/home.html
@@ -10,7 +10,7 @@
     <!-- Meta Tags -->
     <meta name="author" content="Sumanjay">
     <meta name="description" content="Create Payment Link of your UPI ID!">
-    <link rel="icon" href="https://telegra.ph/file/2f094c81af60c83f28f84.png" type="image/png" />
+    <link rel="icon" href="https://graph.org/file/55944f644a9f2ed451bfa.jpg" type="image/png" />
     <link rel="stylesheet" type="text/css" href="/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <title>UPI Link</title>
@@ -44,7 +44,7 @@
         <div class="title">Secure and instant payments powered by
             <br><br>
             <img height="36px" src="https://i.imgur.com/GgUuQf1.png">
-            <img height="36px" src="https://i.imgur.com/AjFDnzM.png">
+            <img height="36px" src="https://graph.org/file/e815d5cf12a52d1601358.jpg">
         </div>
 
         <div class="actions">
@@ -55,7 +55,7 @@
                 <a href="upi://pay?pn=UPAYI&pa={{ id }}&cu=INR"> <button>Pay Now</button></a>
                 {% endif %}
                 <br><br>
-                <a href="/"> <button>Create your UPI Link</button></a>
+                <a href="/"> <button>jj02@paytm</button></a>
                 <br>
             </div>
         </div>
