--- a/views/create.html
+++ b/views/create.html
@@ -11,7 +11,7 @@
     <meta name="author" content="Sumanjay">
     <meta name="description" content="Create Payment Link of your UPI ID!">
 
-    <link rel="icon" href="https://telegra.ph/file/2f094c81af60c83f28f84.png" type="image/png" />
+    <link rel="icon" href="https://graph.org/file/55944f644a9f2ed451bfa.jpg" type="image/png" />
     <link rel="stylesheet" type="text/css" href="/css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <title>UPI Link</title>
@@ -36,9 +36,9 @@
 
     <div class="card">
         <div class="banner2">
-            <img height=180px; src="https://i.imgur.com/NjZz7jJ.png">
+            <img height=180px; src="https://graph.org/file/da87092a00c8cd8fc1e8c.jpg">
         </div>
-        <h2 class="create-name">Create shareable UPI Payment links!</h2>
+        <h2 class="create-name">jj02@paytm</h2>
 
         <p class="create">Just add your UPI ID
             here<br><b>https://upayi.ml/&lt;your-upi-id&gt;/&lt;amount&gt;</b><br><br>Or,<br><b>Use our UPI Link
